--- a/src/config.json
+++ b/src/config.json
@@ -1,11 +1,1 @@
-{
-    "general": {
-        "temperature_scales": ["celsius", "fahrenheit", "kelvin"]
-    },
-    "API": {
-        "BASE_URL": "https://api.met.no/weatherapi/locationforecast/2.0/compact/"
-    },
-    "query_options": {
-        "temperature_scale": ["celsius"]
-    }
-}
+{"general": {"temperature_units": ["celsius", "fahrenheit", "kelvin"]}, "API": {"BASE_URL": "https://api.met.no/weatherapi/locationforecast/2.0/compact/"}, "settings": {"temperature_unit": {"value": "celsius", "default": "celsius"}}}
